force-app/main/default/objects/Activity/fields/FS_Area__c.field-meta.xml
<CustomField>
    <fullName>FS_Area__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;R</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>Kam</fullName>
            </value>
            <value>
                <fullName>Sales/MKTG</fullName>
            </value>
            <value>
                <fullName>Talento Humano</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>