force-app/main/default/objects/Activity/fields/FS_NumeroTarea__c.field-meta.xml
<CustomField>
    <fullName>FS_NumeroTarea__c</fullName>
    <displayFormat>T-{0000000}</displayFormat>
    <label>Número de Tarea</label>
    <type>AutoNumber</type>
</CustomField>