force-app/main/default/objects/Activity/fields/FS_NumeroTareaLink__c.field-meta.xml
<CustomField>
    <fullName>FS_NumeroTareaLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; +  Id ,  FS_NumeroTarea__c,  &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Tarea</label>
    <type>Text</type>
</CustomField>