force-app/main/default/objects/Activity/listViews/Actividadesdemiequipo.listView-meta.xml
<ListView>
    <fullName>Actividadesdemiequipo</fullName>
    <filterScope>Team</filterScope>
    <label>Actividades de mi equipo</label>
</ListView>