force-app/main/default/objects/Activity/listViews/Misactividades.listView-meta.xml
<ListView>
    <fullName>Misactividades</fullName>
    <filterScope>Mine</filterScope>
    <label>Mis actividades</label>
</ListView>