force-app/main/default/objects/Activity/listViews/Misactividadesdelegadas.listView-meta.xml
<ListView>
    <fullName>Misactividadesdelegadas</fullName>
    <filterScope>Delegated</filterScope>
    <label>Mis actividades delegadas</label>
</ListView>